<?xml version="1.0"?>
<package format="2">
  <name>util_3dnav</name>
  <version>0.1.0</version>
  <description>
    Utility bridge between Robot_Midware JSON task files and the 3D navigation
    planner path interface.
  </description>

  <maintainer email="robot@example.com">CertaintyX</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
